sezon-1/8-namespaces/prod/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: "nginx"
  name: fussy
spec:
  rules:
  - host: gitea.192.168.99.100.nip.io
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
          service:
            name: gitea
            port:
              name: web
